--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello world</title>
     <!-- Google Analytics will go here -->
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4WXZY943PW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-4WXZY943PW');
+  </script>
 </head>
 <body>
-<!--     <iframe 
-        src="https://your-app-name.streamlit.app/?embed=true" 
+    <iframe 
+        src="https://wordwise-ai.streamlit.app/?embed=true" 
         width="100%" 
         height="600"
         style="border:none;">
-    </iframe> -->
-  Hello Welcome to the body
+    </iframe>
 </body>
 </html>
