--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
-    gtag('config', 'G-4WXZY943PW');
+    gtag('config', 'G-4WXZY943PW', {
+      'linker': {
+        'domains': ['wordwise-ai.streamlit.app']
+      }
+    });
   </script>
 </head>
 <body>
@@ -21,3 +25,4 @@
     </iframe>
 </body>
 </html>
+
