--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <iframe 
         src="https://wordwise-ai.streamlit.app/?embed=true" 
         width="100%" 
-        height="600"
+        height="100%"
         style="border:none;">
     </iframe>
     <h1>Hello Dear Friend. How are you?</h1>
