--- a/index.html
+++ b/index.html
@@ -3,28 +3,52 @@
 <head>
     <!-- Google Analytics will go here -->
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4WXZY943PW"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-4WXZY943PW', {
-      'linker': {
-        'domains': ['wordwise-ai.streamlit.app']
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4WXZY943PW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-4WXZY943PW', {
+        'linker': {
+          'domains': ['wordwise-ai.streamlit.app']
+        }
+      });
+    </script>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
       }
-    });
-  </script>
+      body {
+        height: 100vh;
+        width: 100vw;
+        overflow: hidden;
+      }
+      iframe {
+        display: block;
+        width: 100vw;
+        height: 100vh;
+        border: none;
+      }
+    </style>
 </head>
 <body>
-    <iframe 
-        src="https://wordwise-ai.streamlit.app/?embed=true" 
-        width="100%" 
-        height="1%"
-        style="border:none;">
-    </iframe>
-    <h1>Hello Dear Friend. How are you?</h1>
-    <p>I have multiple TV shows including Friend and Big Bang theory</p>
+    <!-- <iframe 
+        src="https://wordwise-ai.streamlit.app/?embed=true">
+    </iframe> -->
+    <div style="position: relative; width: 100vw; height: 100vh;">
+        <iframe 
+          src="https://wordwise-ai.streamlit.app/?embed=true"
+          style="width: 100vw; height: 100vh; border: none;">
+        </iframe>
+        <div style="
+          position: absolute;
+          left: 0; right: 0; bottom: 0;
+          height: 40px;
+          background: #18191a; /* match your app's background */
+          z-index: 10;">
+        </div>
+      </div>      
 </body>
 </html>
-
