--- a/index.html
+++ b/index.html
@@ -25,17 +25,53 @@
             width: 100vw;
             overflow: hidden;
         }
+        .notice-banner {
+            width: 100vw;
+            box-sizing: border-box;
+            background: #f8f3e1;
+            color: #856404;
+            border-bottom: 1px solid #ffeeba;
+            padding: 12px 20px;
+            font-family: system-ui, sans-serif;
+            font-size: 1rem;
+            text-align: center;
+            z-index: 1000;
+            position: fixed;
+            top: 0;
+            left: 0;
+        }
+        .iframe-container {
+            position: absolute;
+            top: 48px; /* Height of the banner */
+            left: 0;
+            width: 100vw;
+            height: calc(100vh - 48px);
+        }
         iframe {
             display: block;
             width: 100vw;
-            height: 100vh;
+            height: 100%;
             border: none;
+        }
+        @media (max-width: 600px) {
+            .notice-banner {
+                font-size: 0.95rem;
+                padding: 10px 8px;
+            }
+            .iframe-container {
+                top: 56px;
+                height: calc(100vh - 56px);
+            }
         }
     </style>
 </head>
 <body>
-    <iframe 
-        src="https://wordwise-ai.streamlit.app/?embed=true">
-    </iframe>
+    <div class="notice-banner">
+        <!-- <strong>Note:</strong> Sorry for inconvenience, Streamlit does not natively support Google Analytics integration. A workaround is used here, which may cause issues with mobile responsiveness. -->
+        <strong>Notice:</strong> Streamlit does not natively support Google Analytics integration. As a result, workaround is used here, which may affect mobile responsiveness. We appreciate your understanding.
+    </div>
+    <div class="iframe-container">
+        <iframe src="https://wordwise-ai.streamlit.app/?embed=true"></iframe>
+    </div>
 </body>
 </html>
