--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div class="notice-banner">
         <!-- <strong>Note:</strong> Sorry for inconvenience, Streamlit does not natively support Google Analytics integration. A workaround is used here, which may cause issues with mobile responsiveness. -->
-        <strong>Notice:</strong> Streamlit does not natively support Google Analytics integration. As a result, workaround is used here, which may affect mobile responsiveness. We appreciate your understanding.
+        <strong>Notice:</strong> Streamlit does not natively support Google Analytics integration. As a result, workaround is used here, which may affect responsiveness. We appreciate your understanding.
     </div>
     <div class="iframe-container">
         <iframe src="https://wordwise-ai.streamlit.app/?embed=true"></iframe>
